# Assignment1_Ollama_Chatbot

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  customer_demo.py  demo_multi_model_cost_analysis.py  docker-compose.yml  ollama-chatbot-flask.service  pyproject.toml  pytest-integration.ini  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci-cd.yml  codeql.yml  test.yml
.streamlit/: config.toml
apps/: app_flask.py  app_flask_with_plugins.py  app_streamlit.py  app_streamlit_accessible.py  streamlit_styles.py
apps/static/css/: style.css
apps/static/js/: chat.js
apps/templates/: index.html
deployment/docker/: Dockerfile  docker-compose.yml
deployment/systemd/: ollama-chatbot-streamlit.service
docs/: API.md  CI_CD_FIX.md  DEPLOYMENT.md  PERSISTENCE.md  PERSISTENCE_CHANGELOG.md  PRD.md  PROMPTS.md  SCREENSHOT_GUIDE.md  TESTING.md  index.md
docs/architecture/: plugin-system.md  security-architecture.md  system-architecture.md
docs/business/: cost-analysis.md
docs/community/: launch-readiness.md  open-source-guide.md  reusable-components.md
docs/getting-started/: dashboard-guide.md  research-quickstart.md
docs/guides/developer/: plugin-development.md  testing.md
docs/guides/user/: model-customization.md  model-flexibility.md  multi-model-reference.md  prompt-engineering.md
docs/innovation/: detailed-analysis.md  highlights.md  summary.md
docs/research/: framework.md
docs/specs/: PRD.md  plugin-system-prd.md
examples/: research_dashboard.py  run_research_experiments.py
plugins/: base_plugin.py  config.yaml
plugins/examples/: audit_plugin.py  auth_plugin.py  logging_middleware_plugin.py  rate_limit_plugin.py
plugins/monitoring_plugins/: resource_monitor_plugin.py
research/: __init__.py  data_comparison.py  mathematical_proofs.py  sensitivity_analysis.py
scripts/: launch_flask.sh  launch_ollama.sh  run_tests.sh  shutdown_all.sh
scripts/deploy/: launch_streamlit.sh  shutdown_flask.sh  shutdown_streamlit.sh
scripts/dev/: run_integration_tests.sh  run_tests.sh
src/ollama_chatbot/: __init__.py
src/ollama_chatbot/api/: __init__.py  flask_app.py  flask_app_with_plugins.py
src/ollama_chatbot/cli/: __init__.py
src/ollama_chatbot/core/: __init__.py
src/ollama_chatbot/plugins/: __init__.py  base_plugin.py  config_loader.py  hooks.py  plugin_manager.py  types.py
src/ollama_chatbot/plugins/backend_plugins/: ollama_backend_plugin.py
src/ollama_chatbot/plugins/examples/: audit_plugin.py  auth_plugin.py  content_filter_plugin.py  conversation_memory_plugin.py  logging_middleware_plugin.py  rag_plugin.py  rate_limit_plugin.py
src/ollama_chatbot/plugins/monitoring_plugins/: resource_monitor_plugin.py
src/ollama_chatbot/research/: __init__.py  data_comparison.py  mathematical_proofs.py  sensitivity_analysis.py  visualizations.py
src/ollama_chatbot/ui/: __init__.py  streamlit_accessible.py  streamlit_app.py
tests/: __init__.py  conftest.py  test_accessibility.py  test_compatibility.py  test_flask_app.py  test_integration.py  test_iso25010_compliance.py  test_plugin_system.py  test_portability.py  test_streamlit_app.py
tests/integration/: __init__.py
tests/quality/: __init__.py
tests/unit/: __init__.py  test_base_plugin_comprehensive.py  test_config_loader_coverage.py  test_coverage_boost.py  test_hooks_comprehensive.py  test_plugin_manager_comprehensive.py
