[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-chatbot"
version = "1.0.0"
description = "Privacy-first local AI chatbot with dual interfaces (Streamlit UI + Flask API)"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Fouad Azouagh", email = "your.email@example.com"}
]
maintainers = [
    {name = "Fouad Azouagh", email = "your.email@example.com"}
]
keywords = [
    "ai", "chatbot", "ollama", "llm", "local-ai", "privacy",
    "streamlit", "flask", "rest-api", "machine-learning",
    "natural-language-processing", "plugin-system"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Typing :: Typed",
]
dependencies = [
    "flask>=3.1.2",
    "streamlit>=1.51.0",
    "ollama>=0.4.7",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.1",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "pytest-asyncio>=0.21.1",
]

[project.urls]
Homepage = "https://github.com/fouada/Assignment1_Ollama_Chatbot"
Documentation = "https://github.com/fouada/Assignment1_Ollama_Chatbot/tree/main/docs"
Repository = "https://github.com/fouada/Assignment1_Ollama_Chatbot"
"Bug Tracker" = "https://github.com/fouada/Assignment1_Ollama_Chatbot/issues"
Changelog = "https://github.com/fouada/Assignment1_Ollama_Chatbot/blob/main/CHANGELOG.md"

[project.scripts]
ollama-chatbot-flask = "ollama_chatbot.api.flask_app:main"
ollama-chatbot-streamlit = "ollama_chatbot.ui.streamlit_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ollama_chatbot*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
ollama_chatbot = ["py.typed", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=src/ollama_chatbot",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "quality: Quality compliance tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src/ollama_chatbot"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    # Exclude research/experimental code
    "*/research/*",
    # Exclude example plugins (reference implementations)
    "*/plugins/examples/content_filter_plugin.py",
    "*/plugins/examples/conversation_memory_plugin.py",
    "*/plugins/examples/logging_middleware_plugin.py",
    "*/plugins/examples/rag_plugin.py",
    # Exclude backend plugin implementations (tested via integration)
    "*/plugins/backend_plugins/*",
    # Exclude alternative UI implementations
    "*/ui/streamlit_app.py",
    "*/ui/streamlit_accessible.py",
    # Exclude alternative Flask app with plugins
    "*/api/flask_app_with_plugins.py",
    # Exclude CLI (tested via integration)
    "*/cli/*",
    # Exclude core (tested via other modules)
    "*/core/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
src_paths = ["src", "tests"]
known_first_party = ["ollama_chatbot"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | htmlcov
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

